// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Broadcast a start event. 1`] = `
{
  "name": "web",
  "params": {
    "id": "new",
  },
}
`;

exports[`Broadcast a start event. 2`] = `
{
  "name": "web",
  "params": {
    "id": "old",
  },
}
`;

exports[`Broadcast a success event. 1`] = `
{
  "name": "web",
  "params": {
    "id": "new",
  },
}
`;

exports[`Broadcast a success event. 2`] = `
{
  "name": "web",
  "params": {
    "id": "old",
  },
}
`;

exports[`Find the route by the location. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "home",
  "onEnter": [Function],
  "parents": [],
  "resolve": {},
  "uri": "/",
  "uriParamKeys": [],
  "uriTemplate": "/",
}
`;

exports[`Find the router belong a abstract router by the location. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/settings",
  "matchReg": /\\^\\\\/settings\\$/,
  "name": "settings.account",
  "onEnter": undefined,
  "parents": [
    Route {
      "component": [Function],
      "dismissalDelay": undefined,
      "generateLocation": [Function],
      "generateUri": [Function],
      "isAbstract": true,
      "loadComponent": undefined,
      "matchPattern": "/settings",
      "matchReg": /\\^\\\\/settings\\$/,
      "name": "settings",
      "onEnter": undefined,
      "parents": [],
      "resolve": {},
      "uri": "/settings",
      "uriParamKeys": [],
      "uriTemplate": "/settings",
    },
  ],
  "resolve": {},
  "uri": "",
  "uriParamKeys": [],
  "uriTemplate": "/settings",
}
`;

exports[`Get the current route. 1`] = `
Route {
  "component": [Function],
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "home",
  "onEnter": [Function],
  "parents": [],
  "resolve": {},
  "uri": "/",
  "uriParamKeys": [],
  "uriTemplate": "/",
}
`;

exports[`Go to a page. 1`] = `
[
  "PUSH",
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": [],
    "resolve": {},
    "uri": "/",
    "uriParamKeys": [],
    "uriTemplate": "/",
  },
  {},
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/login",
    "matchReg": /\\^\\\\/login\\$/,
    "name": "login",
    "onEnter": [Function],
    "parents": [],
    "resolve": {},
    "uri": "/login",
    "uriParamKeys": [],
    "uriTemplate": "/login",
  },
  {},
  {
    "params": {},
  },
]
`;

exports[`Go to a page. 2`] = `
<div>
  Login
</div>
`;

exports[`Reload the page. 1`] = `
[
  "RELOAD",
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": [],
    "resolve": {},
    "uri": "/",
    "uriParamKeys": [],
    "uriTemplate": "/",
  },
  {},
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": [],
    "resolve": {},
    "uri": "/",
    "uriParamKeys": [],
    "uriTemplate": "/",
  },
  {},
  {
    "params": {},
  },
]
`;

exports[`Render the error component when reload with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error component when the history was changed with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error component when the router was started with error. 1`] = `
<div>
  Error
</div>
`;

exports[`Render the error page without the error component. 1`] = `
<div>
  Home
</div>
`;

exports[`Render the error page. 1`] = `
<div>
  Error
</div>
`;

exports[`Start dispatch routes. 1`] = `
[
  "INITIAL",
  null,
  null,
  Route {
    "component": [Function],
    "dismissalDelay": undefined,
    "generateLocation": [Function],
    "generateUri": [Function],
    "isAbstract": false,
    "loadComponent": undefined,
    "matchPattern": "/",
    "matchReg": /\\^\\\\/\\$/,
    "name": "home",
    "onEnter": [Function],
    "parents": [],
    "resolve": {},
    "uri": "/",
    "uriParamKeys": [],
    "uriTemplate": "/",
  },
  {},
  {
    "params": {},
  },
]
`;

exports[`Start dispatch routes. 2`] = `
<div>
  Home
</div>
`;
